feat: implemented deletes endpoints for brewery, beer and classification
